Task-System integration